# skillkeep

./: .gitattributes  .gitignore  README.md  biome.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
apps/cli/: package.json
apps/cli/src/: main.ts  output.ts
apps/cli/test/: main.test.ts  test-utils.ts
apps/desktop/: NOTES.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/tui/: package.json
apps/tui/src/: App.tsx  client.ts  main.ts  navigation.ts  types.ts
apps/tui/src/components/: FatalError.tsx  ListSection.tsx  TopBar.tsx
apps/tui/src/hooks/: useHealth.ts
apps/tui/src/screens/: DetectScreen.tsx  RegistryScreen.tsx  StatusScreen.tsx  SyncScreen.tsx
apps/tui/test/: app.test.tsx  client.test.ts
apps/tui/test/helpers/: wait.ts
apps/tui/test/screens/: detect.test.tsx  registry.test.tsx  status.test.tsx  sync.test.tsx
docker/: Dockerfile  railway.template.json
docs/specs/: gardener-router.md
harness-output/: baseline.md  build3-selftest.json  build4-selftest.json  critique-1.md  critique-2.md  critique-3.md  critique-4.md  dashboard.ts  design-description-1.md  design-description-2.md  design-description-3.md  design-flags-1.json  design-flags-2.json  design-flags-3.json  design-flags-4.json  report.md  run-plan.md  scores.json  serve.json  spec.md  sprint-contract.md  status.json
harness-output/design-system/: tokens.css
harness-output/design-system/skill/skillkeep-design/: SKILL.md  design-dna.md
harness-output/eval-2/: a11y-desktop.txt  click-coverage.json  eval-results.json  interactives-desktop.json
harness-output/eval-3/: _measurements.json  _retest.json
harness-output/eval-4/: _desktop_discard.json  _phone.json  _text_console_audit.json
