[package]
name = "skillkeep-desktop"
version = "0.1.0"
description = "skillkeep desktop shell (Tauri 2)"
edition = "2021"
rust-version = "1.77"

# Desktop-only shell (macOS + Windows per plan) -- no mobile target, so a
# plain binary crate is enough; no separate cdylib/staticlib lib.rs needed.
[[bin]]
name = "skillkeep-desktop"
path = "src/main.rs"

[build-dependencies]
# Generates the `tauri::generate_context!()` glue from tauri.conf.json at build time.
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri runtime: window/webview management, IPC, bundler config types.
tauri = { version = "2", features = [] }
# Spawns the compiled `skillkeep` CLI as the daemon sidecar (Command::sidecar) and manages its lifecycle.
tauri-plugin-shell = "2"
# Native error dialogs for boot-sequence failures (sidecar spawn/health-check failure).
tauri-plugin-dialog = "2"
# (De)serialises the injected `window.__SKILLKEEP__` global and reads `daemon.token`/`daemon.port`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Resolves the platform data dir (matches @skillkeep/core's dataDir() contract) without hand-rolling per-OS paths.
dirs = "6"
# Minimal HTTP client for polling the sidecar's GET /healthz; no TLS features needed (loopback http only).
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json"] }
